meta-bsp: Adjust Raspberry Pi device tree files
Addjust dtb and dtbo files for Raspberry Pi following the update of
the Linux kernel from 5.10.110 to 6.12.25.

Replace bcm2711-rpi-4-b.dtb with broadcom/bcm2711-rpi-4-b.dtb.

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/meta-bsp/conf/machine/raspberrypi4.conf
+++ b/meta-bsp/conf/machine/raspberrypi4.conf
@@ -8,7 +8,7 @@ require conf/machine/include/rpi-base.inc
 
 KERNEL_CONFIG = "bcm2711_defconfig"
 
-RPI_KERNEL_DEVICETREE_DTB = "bcm2711-rpi-4-b.dtb"
+RPI_KERNEL_DEVICETREE_DTB = "broadcom/bcm2711-rpi-4-b.dtb"
 
 UBOOT_MACHINE = "rpi_4_32b_config"
 
