u-boot_2025.04.bbappend: Integrate SWUpdate
Integrate SWUpdate for Raspberry Pi 5 through a dynamic layer and
bbappend for U-Boot version 2025.04 from layer meta-lts-mixins.

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/meta-bsp/conf/layer.conf
+++ b/meta-bsp/conf/layer.conf
@@ -9,6 +9,16 @@ BBFILES := "${BBFILES} \
     ${LAYERDIR}/recipes-*/*/*/*.bbappend \
 "
 
+# The dynamic-layers directory hosts the extensions and layer specific
+# modifications.
+#
+# The .bbappend and .bb files are included if the respective layer
+# collection is available.
+BBFILES_DYNAMIC += " \
+    lts-u-boot-mixin:${LAYERDIR}/dynamic-layers/meta-lts-mixins-uboot/*/*/*.bb \
+    lts-u-boot-mixin:${LAYERDIR}/dynamic-layers/meta-lts-mixins-uboot/*/*/*.bbappend \
+"
+
 BBFILE_COLLECTIONS += "victronenergy-bsp"
 BBFILE_PATTERN_victronenergy-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_victronenergy-bsp = "5"
