meta-bsp: Raspberry Pi 5: Enable autologin
Enable autologin for Raspberry Pi 5 using ttyAMA10 like on other
supported Raspberry Pi models.

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/meta-bsp/conf/machine/raspberrypi5.conf
+++ b/meta-bsp/conf/machine/raspberrypi5.conf
@@ -18,7 +18,6 @@ MACHINE_EXTRA_RRECOMMENDS += "\
 "
 
 SDIMG_KERNELIMAGE ?= "kernel_2712.img"
-SERIAL_CONSOLES ?= "115200;ttyAMA10"
 
 VC4DTBO ?= "vc4-kms-v3d"
 
@@ -35,3 +34,8 @@ UBOOT_MACHINE = "rpi_arm64_config"
 
 PREFERRED_PROVIDER_virtual/bootloader = "u-boot"
 PREFERRED_VERSION_virtual/bootloader = "2025.04%"
+
+INITTAB = " \
+        MA10:12345:respawn:/sbin/getty -L -l /sbin/autologin -n 115200 ttyAMA10 vt102 | \
+        1:12345:respawn:/sbin/getty -L -l /sbin/autologin -n 38400 tty1 vt102 \
+"
