meta-bsp: Raspberry Pi 4 and 5: start-gui
Set variable START_GUI to start-gui for Raspberry Pi 4 and 5.
Set VENUS_GPU = "1" to ensure that the image includes the
mesa-megadriver.

Signed-off-by: Leon Anavi <leon.anavi@konsulko.com>

--- a/meta-bsp/conf/machine/raspberrypi4.conf
+++ b/meta-bsp/conf/machine/raspberrypi4.conf
@@ -16,3 +16,5 @@ INITTAB = " \
 	S0:12345:respawn:/sbin/getty -L -l /sbin/autologin -n 115200 ttyS0 vt102 | \
 	1:12345:respawn:/sbin/getty -L -l /sbin/autologin -n 38400 tty1 vt102 \
 "
+
+START_GUI="start-gui"
